--- a/index.html
+++ b/index.html
@@ -1,19 +1,95 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="videophone.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1>
-        Đạt. B
-    </h1>
+    <img id="header" src="https://freshervn.github.io/phone/img/logo.png" alt="">
     <hr>
-
-
+    <div id="control">
+        <button onclick="openwindown('csstricks')">Css tricks</button>
+        <button onclick="openwindown('containervideo')">Designing</button>    
+        <button class="fa fa-home" onclick=" openwindown('homewindown')"></button>    
+    </div>
+    <div id="homewindown" class="windown">
+        <h1>Demo: <br> phone style</h1>
+        <h2>Design: me :D</h2>
+        <h3>link: https://freshervn.github.io/phone/</h3>
+        <div class="fb-comments" data-href="https://freshervn.github.io/phone/" data-width="" data-numposts="5"></div>
+    </div>
+    <div id="containervideo" class="windown"> 
+        <div class="video">
+            <span> Lên kế hoạch thiết kế 1 web site</span>
+            <iframe  src="https://www.youtube.com/embed/-Dwo-UOjDuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span> Thiết kế bố cục web site</span>
+            <iframe  src="https://www.youtube.com/embed/PmmQjLqJQlY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span>Sự khác biệt giữa thiết kế đồ họa và thiết kế giao diện</span>
+            <iframe  src="https://www.youtube.com/embed/EFf9jBs2yfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span> Bạn nên trở thành kiểu design nào</span>
+            <iframe  src="https://www.youtube.com/embed/4K6hauan2qU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span> Xu hướng thiết kế logo 2020</span>
+            <iframe src="https://www.youtube.com/embed/jPQERSl4_iU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span> Thiết kế logo theo ý khách hàng</span>
+            <iframe src="https://www.youtube.com/embed/Jj6oketrng8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <span> Thiết kế với màu sắc</span>
+            <iframe src="https://www.youtube.com/embed/_2LLXnUdUIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div id="csstricks" class="windown">
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+        <div class="css">
+            <span> Thiết kế bố cục web site</span>
+                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+        </div>
+    </div>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0&appId=2477828602276902&autoLogAppEvents=1"></script>
+    <script>
+        function openwindown(w){
+            let wd=document.getElementsByClassName('windown');
+            for(let i=0; i<window.length;i++){
+                if (w==wd[i].id)
+                {
+                    wd[i].style.display="block";
+                } else wd[i].style.display="none";
+            }
+        }
+    </script>
 </body>
 
 </html>
