--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Demo: <br> phone style</h1>
         <h2>Design: me :D</h2>
         <h3>link: https://freshervn.github.io/phone/</h3>
-        <div class="fb-comments" data-href="https://freshervn.github.io/phone/" data-width="" data-numposts="5"></div>
+        <div style="height: 500px;" class="fb-comments" data-href="https://freshervn.github.io/phone/" data-width="" data-numposts="5"></div>
     </div>
     <div id="containervideo" class="windown"> 
         <div class="video">
