--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,83 +13,99 @@
     <hr>
     <div id="control">
         <button onclick="openwindown('csstricks')">Css tricks</button>
-        <button onclick="openwindown('containervideo')">Designing</button>    
-        <button class="fa fa-home" onclick=" openwindown('homewindown')"></button>    
+        <button onclick="openwindown('containervideo')">Designing</button>
+        <button class="fa fa-home" onclick=" openwindown('homewindown')"></button>
     </div>
     <div id="homewindown" class="windown">
         <h1>Demo: <br> phone style</h1>
         <h2>Design: me :D</h2>
         <h3>link: https://freshervn.github.io/phone/</h3>
         <div style="height: 250px; width: 100%;">
-            <div class="fb-comments" data-href="https://freshervn.github.io/phone/" data-width="" data-numposts="5"></div>
-        </div>        
+            <div class="fb-comments" data-href="https://freshervn.github.io/phone/" data-width="" data-numposts="5">
+            </div>
+        </div>
     </div>
-    <div id="containervideo" class="windown"> 
+    <div id="containervideo" class="windown">
         <div class="video">
             <span> Lên kế hoạch thiết kế 1 web site</span>
-            <iframe  src="https://www.youtube.com/embed/-Dwo-UOjDuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/-Dwo-UOjDuw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span> Thiết kế bố cục web site</span>
-            <iframe  src="https://www.youtube.com/embed/PmmQjLqJQlY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/PmmQjLqJQlY" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span>Sự khác biệt giữa thiết kế đồ họa và thiết kế giao diện</span>
-            <iframe  src="https://www.youtube.com/embed/EFf9jBs2yfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/EFf9jBs2yfU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span> Bạn nên trở thành kiểu design nào</span>
-            <iframe  src="https://www.youtube.com/embed/4K6hauan2qU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/4K6hauan2qU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span> Xu hướng thiết kế logo 2020</span>
-            <iframe src="https://www.youtube.com/embed/jPQERSl4_iU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/jPQERSl4_iU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span> Thiết kế logo theo ý khách hàng</span>
-            <iframe src="https://www.youtube.com/embed/Jj6oketrng8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Jj6oketrng8" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="video">
             <span> Thiết kế với màu sắc</span>
-            <iframe src="https://www.youtube.com/embed/_2LLXnUdUIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/_2LLXnUdUIc" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </div>
     <div id="csstricks" class="windown">
         <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+            <span>Ảnh đẹp với Unsplash API </span>
+            <iframe src="https://css-tricks.com/add-beautiful-images-with-the-unsplash-api/"></iframe>
         </div>
         <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+            <span> Ảnh chồng ảnh</span>
+            <iframe src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
         </div>
         <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+            <span> Mẹo với text area</span>
+            <iframe src="https://css-tricks.com/textarea-tricks/"></iframe>
+        </div>
+
+        <div class="css">
+            <span> Làm màu thanh cuốn </span>
+            <iframe src="https://css-tricks.com/how-to-use-css-scroll-snap/"></iframe>
         </div>
         <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+            <span> Phối màu</span>
+            <iframe src="https://css-tricks.com/nerds-guide-color-web/"></iframe>
         </div>
         <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
-        </div>
-        <div class="css">
-            <span> Thiết kế bố cục web site</span>
-                <iframe  src="https://css-tricks.com/almanac/properties/m/mask-image/"></iframe>
+            <span> Hướng dẫn ước tính css </span>
+            <iframe src="https://css-tricks.com/a-complete-guide-to-calc-in-css/"></iframe>
         </div>
     </div>
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0&appId=2477828602276902&autoLogAppEvents=1"></script>
+    <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v6.0&appId=2477828602276902&autoLogAppEvents=1"></script>
     <script>
-        function openwindown(w){
-            let wd=document.getElementsByClassName('windown');
-            for(let i=0; i<window.length;i++){
-                if (w==wd[i].id)
-                {
-                    wd[i].style.display="block";
-                } else wd[i].style.display="none";
+        function openwindown(w) {
+            let wd = document.getElementsByClassName('windown');
+            for (let i = 0; i < window.length; i++) {
+                if (w == wd[i].id) {
+                    wd[i].style.display = "block";
+                } else wd[i].style.display = "none";
             }
         }
     </script>
